--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -3,7 +3,7 @@ name: Deploy to Sandbox
 on:
   push:
     branches:
-      - main
+      - Developer
 
 jobs:
   deploy:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Deploy to Sandbox
         run: |
-          ssh ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }}''
+          ssh ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} '/Users/pawankumar/Documents/Project/deployment-github-action/manifest/package.xml'
            # Add your deployment commands here
            # For example, if deploying to a server, use SSH or other deployment tools.
            # If deploying to a cloud service, use the respective CLI.
