--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Authorization to Sandbox
+        run: |
+        sf org display --target-org ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }}
+
       - name: Deploy to Sandbox
         run: |
           sfdx force:source:deploy -u sandbox -p force-app/main/default
