--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -19,7 +19,7 @@ jobs:
       
       - name: Deploy to Sandbox
         run: |
-          ssh -i $DEPLOYMENT_API_KEY ${{ secrets.SFDC_SANDBOX_USERNAME_DEVELOPER_ORG }} sfdx force:source:deploy -u sandbox -p force-app/main/default
+          sfdx force:source:deploy -u sandbox -p force-app/main/default
            # Add your deployment commands here
            # For example, if deploying to a server, use SSH or other deployment tools.
            # If deploying to a cloud service, use the respective CLI.
