--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -6,18 +6,18 @@ on:
       - Developer
 
 jobs:
-  Build:
+  deploy:
     runs-on: ubuntu-latest
-
-    - name: Install the SFDX CLI
-      run: |
-      npm install @salesforce/cli --global
-      sf --help
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Authenticate with Salesforce Sandbox
+      run: |
+        echo "${{ secrets.JWT_PRIVATE_KEY }}" > server.key
+        sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile ./server.key --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --instanceurl ${{ secrets.SFDC_SANDBOX_URL }} --setdefaultdevhubusername -a sandbox
+        
       - name: Deploy to Sandbox
         run: |
           sfdx force:source:deploy -u sandbox -p force-app/main/default
