--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -13,15 +13,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install NPM
-        run: |
-          npm install
-          
-      # Install the SFDX CLI using npm command
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Install the SFDX CLI
-        run: |
-          npm install @salesforce/cli --global
-          sf --help
+        run: npm install @salesforce/cli --global
+
+      - name: Build
+        run: npm run build
 
       - name: Deploy to Sandbox
         run: |
