--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -14,13 +14,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Salesforce CLI
-        run: |
-          echo "Installing Salesforce CLI"
-          wget https://developer.salesforce.com/media/salesforce-cli/sfdx-cli/channels/stable/sfdx-cli-linux-x64.tar.xz
-          mkdir sfdx
-          tar xJf sfdx-cli-linux-x64.tar.xz -C sfdx --strip-components 1
-          export PATH=$PWD/sfdx/bin:$PATH
-          sfdx --version
+        run: 
+          command: |
+            npm install --global sfdx-cli
+            name: Install SFDX
 
       - name: Authorize Salesforce Org
         run: sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile ./path/to/server.key --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername -a sfdc-sandbox
