--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -9,6 +9,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+  env:
+      SALESFORCE_CONSUMER_KEY: ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }}
+      SALESFORCE_CONSUMER_SECRET: ${{ secrets.SFDC_CONSUMER_SECRET_DEVELOPER_ORG }}
+      SALESFORCE_USERNAME: ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }}
+      SALESFORCE_PASSWORD: ${{ secrets.SFDC_PASSWORD_DEVELOPER_ORG }}
+      SALESFORCE_SECURITY_TOKEN: ${{ secrets.SFDC_SECURITY_TOKEN_DEVELOPER_ORG }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,7 +25,8 @@ jobs:
             npm install --global sfdx-cli
 
       - name: Authorize Salesforce Org
-        run: sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile ./path/to/server.key --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername -a sfdc-sandbox
+        run: |
+          ACCESS_TOKEN=$(curl -d "grant_type=password" -d "client_id=$SALESFORCE_CONSUMER_KEY" -d "client_secret=$SALESFORCE_CONSUMER_SECRET" -d "username=$SALESFORCE_USERNAME" -d "password=$SALESFORCE_PASSWORD$SALESFORCE_SECURITY_TOKEN" https://test.salesforce.com/services/oauth2/token | jq -r .access_token)
 
       - name: Deploy to Salesforce Sandbox
         run: sfdx force:source:deploy -u sfdc-sandbox -p force-app/main/default
