--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -9,13 +9,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-  env:
-      SALESFORCE_CONSUMER_KEY: ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }}
-      SALESFORCE_CONSUMER_SECRET: ${{ secrets.SFDC_CONSUMER_SECRET_DEVELOPER_ORG }}
-      SALESFORCE_USERNAME: ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }}
-      SALESFORCE_PASSWORD: ${{ secrets.SFDC_PASSWORD_DEVELOPER_ORG }}
-      SALESFORCE_SECURITY_TOKEN: ${{ secrets.SFDC_SECURITY_TOKEN_DEVELOPER_ORG }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,7 +19,7 @@ jobs:
 
       - name: Authorize Salesforce Org
         run: |
-          ACCESS_TOKEN=$(curl -d "grant_type=password" -d "client_id=$SALESFORCE_CONSUMER_KEY" -d "client_secret=$SALESFORCE_CONSUMER_SECRET" -d "username=$SALESFORCE_USERNAME" -d "password=$SALESFORCE_PASSWORD$SALESFORCE_SECURITY_TOKEN" https://test.salesforce.com/services/oauth2/token | jq -r .access_token)
+          ACCESS_TOKEN=$(curl -d "grant_type=password" -d "client_id=${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }}" -d "client_secret=${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }}" -d "username=${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }}" -d "password=${{ secrets.SFDC_PASSWORD_DEVELOPER_ORG }}${{ secrets.SFDC_SECURITY_TOKEN_DEVELOPER_ORG }}" https://test.salesforce.com/services/oauth2/token | jq -r .access_token)
 
       - name: Deploy to Salesforce Sandbox
         run: sfdx force:source:deploy -u sfdc-sandbox -p force-app/main/default
