--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -22,5 +22,6 @@ jobs:
           ACCESS_TOKEN=$(curl -d "grant_type=password" -d "client_id=${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }}" -d "client_secret=${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }}" -d "username=${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }}" -d "password=${{ secrets.SFDC_PASSWORD_DEVELOPER_ORG }}${{ secrets.SFDC_SECURITY_TOKEN_DEVELOPER_ORG }}" https://test.salesforce.com/services/oauth2/token | jq -r .access_token)
 
       - name: Deploy to Salesforce Sandbox
+        echo "::set-output name=ACCESS_TOKEN::$ACCESS_TOKEN"
         run: sfdx force:source:deploy -u sfdc-sandbox -p force-app/main/default
 
