--- a/.github/workflows/Salesforce-Deployment-test.yml
+++ b/.github/workflows/Salesforce-Deployment-test.yml
@@ -13,10 +13,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Salesforce CLI
-        uses: forcedotcom/sfdx-travisci@v1.1.0
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          version: 'latest'
+          node-version: 16
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Set up Salesforce CLI
+        run: 
+            npm install --global sfdx-cli
 
       - name: Generate JWT token
         run: |
