--- a/.github/workflows/Salesforce-Deployment-test.yml
+++ b/.github/workflows/Salesforce-Deployment-test.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Authenticate with Salesforce
         run: |
-          sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile <(echo $JWT) --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername -a <alias> -r ${{ secrets.SFDC_SANDBOX_URL }}
+          sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile <(echo $JWT) --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername -a deploymentrun -r ${{ secrets.SFDC_SANDBOX_URL }}
 
       - name: Deploy to Salesforce org
         run: |
