--- a/.github/workflows/Salesforce-Deployment-test.yml
+++ b/.github/workflows/Salesforce-Deployment-test.yml
@@ -30,13 +30,12 @@ jobs:
         run: |
           echo "Creating JWT token..."
           openssl genrsa -out jwt-key.pem 4096
-          openssl rsa -in jwt-key.pem -pubout -outform PEM -out jwt-key.pub.pem
           JWT=$(openssl dgst -sha256 -sign jwt-key.pem <(echo -n "$(date +%s)")) # This is a basic JWT. You might need to adjust this based on Salesforce requirements.
           echo "::set-output name=token::$JWT"
 
       - name: Authenticate with Salesforce
         run: |
-          sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile <(echo $JWT) --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername -a deploymentrun -r ${{ secrets.SFDC_SANDBOX_URL }}
+          sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile jwt-key.pem --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername -a deploymentrun -r ${{ secrets.SFDC_SANDBOX_URL }}
 
       - name: Deploy to Salesforce org
         run: |
