--- a/.github/workflows/Salesforce-Deployment-test.yml
+++ b/.github/workflows/Salesforce-Deployment-test.yml
@@ -35,8 +35,13 @@ jobs:
 
       - name: Authenticate with Salesforce
         run: |
-          sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile jwt-key.pem --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername -a deploymentrun -r ${{ secrets.SFDC_SANDBOX_URL }}
-          
+          sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} \
+                                     --jwtkeyfile jwt-key.pem \
+                                     --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} \
+                                     --setdefaultdevhubusername \
+                                     --instanceurl https://test.salesforce.com \
+                                     --setdefaultusername -a deploymentrun
+      
       - name: Deploy to Salesforce org
         run: |
           sfdx force:source:deploy --manifest=manifest/package.xml --testlevel=RunLocalTests -u ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }}
