--- a/.github/workflows/Salesforce-Deployment-test.yml
+++ b/.github/workflows/Salesforce-Deployment-test.yml
@@ -35,12 +35,7 @@ jobs:
 
       - name: Authenticate with Salesforce
         run: |
-          sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} \
-                                    --jwtkeyfile jwt-key.pem \
-                                    --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} \
-                                    --setdefaultdevhubusername \
-                                    --instanceurl https://test.salesforce.com \
-                                    --setdefaultusername -a deploymentrun
+          sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile jwt-key.pem --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername --instanceurl https://test.salesforce.com --setdefaultusername -a deploymentrun
 
       - name: Deploy to Salesforce org
         run: |
