--- a/.github/workflows/Salesforce-Deployment-test.yml
+++ b/.github/workflows/Salesforce-Deployment-test.yml
@@ -33,7 +33,7 @@ jobs:
           JWT=$(openssl dgst -sha256 -sign jwt-key.pem <(echo -n "$(date +%s)")) # This is a basic JWT. You might need to adjust this based on Salesforce requirements.
           echo "::set-output name=token::$JWT"
 
-      - name: Authenticate with Salesforce
+      - name: Authenticate with Salesforce - Developer
         run: |
           sfdx force:auth:jwt:grant --clientid ${{ secrets.SFDC_CONSUMER_KEY_DEVELOPER_ORG }} --jwtkeyfile jwt-key.pem --username ${{ secrets.SFDC_USERNAME_DEVELOPER_ORG }} --setdefaultdevhubusername --instanceurl https://test.salesforce.com --setdefaultusername -a deploymentrun
 
